tests/integration/snapshots/integration__conformance__y_number_negative_zero.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
[-0]
stdout ---
[-0]

stderr ---
