tests/integration/snapshots/integration__conformance__y_number_real_capital_e.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[1E22]
stdout ---
[1e22]

stderr ---
