tests/integration/snapshots/integration__conformance__y_number_real_capital_e.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
[1E22]
stdout ---
[1E22]

stderr ---
