tests/integration/snapshots/integration__conformance__y_number_real_capital_e_pos_exp.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[1E+2]
stdout ---
[1e2]

stderr ---
