tests/integration/snapshots/integration__conformance__y_number_real_capital_e_pos_exp.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
[1E+2]
stdout ---
[1E+2]

stderr ---
